--- a/popup.html
+++ b/popup.html
@@ -236,11 +236,11 @@
                 <div class="form-group">
                     <label for="savePath">保存路径</label>
                     <div class="path-input-container">
-                        <input type="text" id="savePath" name="savePath" placeholder="例如: Downloads/TwitterCollections" required>
-                        <button type="button" class="path-browse-btn" id="browsePath">浏览</button>
+                        <input type="text" id="savePath" name="savePath" placeholder="默认: Downloads/Twitter" required>
+                        <button type="button" class="path-browse-btn" id="browsePath">选择路径</button>
                     </div>
                     <div class="help-text">
-                        设置推文保存的本地文件夹路径。路径相对于默认下载文件夹。
+                        设置推文保存的本地文件夹路径（相对于默认下载文件夹）。默认路径：Downloads/Twitter。
                     </div>
                 </div>
 
