--- a/tweet-browser.html
+++ b/tweet-browser.html
@@ -331,7 +331,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🐦 推文收藏浏览器</h1>
+            <h1>推文收藏浏览器</h1>
             <p>管理和浏览你收藏的Twitter推文</p>
         </div>
 
