--- a/tweet-browser.html
+++ b/tweet-browser.html
@@ -162,11 +162,38 @@
             padding: 20px;
             transition: all 0.2s ease;
             cursor: pointer;
+            position: relative;
         }
 
         .tweet-card:hover {
             box-shadow: 0 8px 25px rgba(0,0,0,0.1);
             transform: translateY(-2px);
+        }
+
+        .delete-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: rgba(0,0,0,0.1);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 24px;
+            height: 24px;
+            font-size: 16px;
+            line-height: 24px;
+            text-align: center;
+            cursor: pointer;
+            opacity: 0;
+            transition: opacity 0.2s ease, background 0.2s ease;
+        }
+
+        .tweet-card:hover .delete-btn {
+            opacity: 1;
+        }
+
+        .delete-btn:hover {
+            background: #e0245e; /* Twitter's like red */
         }
 
         .tweet-user {
