--- a/tweet-browser.html
+++ b/tweet-browser.html
@@ -401,9 +401,9 @@
 
         <div class="controls">
             <div class="file-input-container">
-                <input type="file" id="fileInput" class="file-input" multiple accept=".json,.html">
+                <input type="file" id="fileInput" class="file-input" webkitdirectory directory>
                 <label for="fileInput" class="file-input-label">
-                    📁 选择推文文件
+                    📁 选择推文文件夹
                 </label>
             </div>
             
