feat: Complete TypeScript refactor
This commit marks the completion of the full refactor from JavaScript to a modern TypeScript architecture using Vite and Rollup.

- All scripts (background, content, popup) converted to TypeScript.

- Implemented a robust build system with separate configs for each script type.

- Resolved all major compatibility issues with Manifest V3, including Service Worker environment limitations (document, URL).

- Fixed all identified bugs, including media path resolution in generated HTML files.

- The extension is now fully functional and stable in its new architecture.

--- a/tweet-browser.html
+++ b/tweet-browser.html
@@ -234,6 +234,12 @@
             color: white;
             font-weight: bold;
             margin-right: 10px;
+            overflow: hidden; /* 确保图片不会超出圆形边界 */
+        }
+        .user-avatar img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* 确保图片填满容器 */
         }
 
         .user-info h4 {
