--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -355,20 +355,14 @@
       <!-- Actions -->
       <div class="section">
         <div class="section-title">操作</div>
-        
         <div class="form-group">
-          <button id="saveBtn" class="button">保存设置</button>
+          <button id="browserBtn" class="button">推文浏览器</button>
         </div>
-
         <div class="form-group">
           <div class="button-group">
-            <button id="testBtn" class="button secondary">测试连接</button>
-            <button id="browserBtn" class="button secondary">推文浏览器</button>
+            <button id="helpBtn" class="button secondary">帮助文档</button>
+            <button id="saveBtn" class="button secondary">保存设置</button>
           </div>
-        </div>
-
-        <div class="form-group">
-          <button id="helpBtn" class="button secondary">帮助文档</button>
         </div>
       </div>
 
