refactor: Remove video download functionality to keep extension lightweight
- Remove video extraction logic from tweet-extractor.ts
- Update media counting to exclude videos across all modules
- Disable video download in media-downloader.ts
- Update UI text to remove video references (images, avatars only)
- Update i18n messages in both English and Chinese
- Keep extension focused on text and image collection for optimal performance
- Maintain code simplicity and avoid complexity of video handling

This change aligns with the extension's core mission of lightweight tweet archiving.

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -347,7 +347,7 @@
         <div class="form-group">
           <div class="form-checkbox">
             <input type="checkbox" id="downloadMedia">
-            <label for="downloadMedia" data-i18n="settingsDownloadMedia">Download media (images, videos, avatars)</label>
+            <label for="downloadMedia" data-i18n="settingsDownloadMedia">Download media (images, avatars)</label>
           </div>
         </div>
       </div>
